; ModuleID = '/home/carl/AnghaBench/redshift/src/extr_solar.c_solar_declination.c'
source_filename = "/home/carl/AnghaBench/redshift/src/extr_solar.c_solar_declination.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @solar_declination to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @solar_declination(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  store double %0, double* %2, align 8
  %5 = load double, double* %2, align 8
  %6 = call double @obliquity_corr(double %5)
  store double %6, double* %3, align 8
  %7 = load double, double* %2, align 8
  %8 = call double @sun_apparent_lon(double %7)
  store double %8, double* %4, align 8
  %9 = load double, double* %3, align 8
  %10 = call i32 @sin(double %9)
  %11 = load double, double* %4, align 8
  %12 = call i32 @sin(double %11)
  %13 = mul nsw i32 %10, %12
  %14 = call double @asin(i32 %13)
  ret double %14
}

declare dso_local double @obliquity_corr(double) #1

declare dso_local double @sun_apparent_lon(double) #1

declare dso_local double @asin(i32) #1

declare dso_local i32 @sin(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
